# efbutils

./: .gitignore  README.md  blinky.py  pyproject.toml
cores/: demo_gen.py  efb.core  efb_gen.py  gen.py  page_buffer.core  page_buffer_gen.py  reader_demo.core  ufm_reader.core  ufm_reader_gen.py
cores/ufm_reader/data/: init.mem  lcmxo2_7000he_b_evn.lpf  step_mxo2.lpf
cores/ufm_reader/scripts/: cp_outputs.tcl  gen_JEDEC.tcl
efbutils/ufm/reader/: demo.py  page_buffer.py  reader.py
src/efbutils/ufm/reader/: demo.py  efb.py  page_buffer.py  sequencer.py
tests/: test_amaranth_gen.py  test_fusesoc_gen.py  test_page_buffer.py  test_sequencer.py
tests/data/: gentest.core
ufm_reader/: demo.v  impl1.xcf  page_buffer.v  page_tb.v  pytest.ini  testbench.v  ufm_reader.core  ufm_tmpl.v
ufm_reader/data/: tinyfpga_ax.lpf
ufm_reader/rtl/: demo.v  page_demo.v  ufm.v  ufm_reader.v  ufm_streamer.v
ufm_reader/tb/: page_tb.v
ufm_reader/tests/: test_sequencer.py
ufm_reader/ufm_reader/: demo.py  efb.py  page_buffer.py  sequencer.py  streamer.py
ufmecho/: ufmecho.py
