[project]
name = "efbutils"
version = "0.1.0"
description = ""
authors = [
    {name = "William D. Jones", email = "thor0505@comcast.net"},
]
dependencies = [
    "amaranth @ git+https://github.com/whitequark/amaranth.git@amaranth-cli",
    "fusesoc @ git+https://github.com/olofk/fusesoc",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
pythonpath = [
  "src/",
]
markers = [
  "clks: tuple of clocks to register for simulator.",
  "module: top-level module to simulate."
]
addopts = "--ignore=fusesoc_libraries"  # "No module named 'migen'"... not sure what's happening here...

[tool.pdm.resolution.overrides]
amaranth-stdio = "git+https://github.com/amaranth-lang/amaranth-stdio"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.1",
    "PyYAML>=6.0.1"
]
